[package]
name = "rssbox"
version = "0.5.0"
authors = ["heng30.xyz"]
edition = "2021"
build = "build.rs"
description = "RSS Client In Rust"
license = "MIT"
categories= ["RSS", "Slint"]
keywords= ["RSS", "Atom", "Slint", "Rust"]

[dependencies]
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
serde = "1.0.139"
serde_derive = "1.0.139"
serde_json = "1.0.82"
lazy_static = "1.4"
rusqlite = "0.27"
clipboard = "0.5"
anyhow = "1.0"
platform-dirs = "0.3"
bytes = "1.4.0"
rss = "2.0"
atom_syndication = "0.12"
rand = "0.8"
webbrowser = "0.8"
html2text = "0.6"
cmd_lib = "1.3"
slint = { version = "1.2", features = ["log"] }
uuid = { version = "1.3", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "socks"] }
tokio = {version = "1.17", features = ["full"]}

[build-dependencies]
slint-build = "1.0.0"
cmd_lib = "1.3"

